--- a/_mixins.placeholder.scss
+++ b/_mixins.placeholder.scss
@@ -13,9 +13,10 @@
 //     @include placeholder {
 //         color: $colorPlaceholder;
 //     }
-@mixin placeholder {
-    &:-moz-placeholder,
-    &::-moz-placeholder,
-    &:-ms-input-placeholder,
+@mixin input-placeholder {
+    &.placeholder { @content; }
+    &:-moz-placeholder { @content; }
+    &::-moz-placeholder { @content; }
+    &:-ms-input-placeholder { @content; }
     &::-webkit-input-placeholder { @content; } 
 }
